--- a/front/vite-project/package.json
+++ b/front/vite-project/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3"
