--- a/front/vite-project/package.json
+++ b/front/vite-project/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3"
   },
